Bug 10227 - "hidden" attribute does not work with Solaris ld
Summary: "hidden" attribute does not work with Solaris ld
Status: RESOLVED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: general (show other bugs)
Version: 1.4.0
Hardware: x86-64 (AMD64) Solaris
: medium normal
Assignee: Carl Worth
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-03-08 13:45 UTC by Thomas Klausner
Modified: 2007-03-16 09:37 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Patch for cairoint.h (901 bytes, patch)
2007-03-08 13:46 UTC, Thomas Klausner
Details | Splinter Review
Patch for pixman.h (546 bytes, patch)
2007-03-08 13:46 UTC, Thomas Klausner
Details | Splinter Review

Description Thomas Klausner 2007-03-08 13:45:34 UTC
I'm forwarding two patches from Gilles Dauphin <dauphin@enst.fr> which have been added to pkgsrc to fix problems building on Solaris 5.10/amd64.

Reason:
 Don't try and do visibility stuff with gcc on Solaris as the Solaris
 gcc/ld doesn't support it.
See
  http://www.NetBSD.org/cgi-bin/query-pr-single.pl?number=33917
and
  http://www.NetBSD.org/cgi-bin/query-pr-single.pl?number=35101
If you want to apply different patches and need a tester, please ask Gilles.

I'll attach patches that apply to 1.4.0.
Comment 1 Thomas Klausner 2007-03-08 13:46:19 UTC
Created attachment 9047 [details] [review]
Patch for cairoint.h
Comment 2 Thomas Klausner 2007-03-08 13:46:48 UTC
Created attachment 9048 [details] [review]
Patch for pixman.h
Comment 3 Behdad Esfahbod 2007-03-09 08:07:02 UTC
We should move this stuff to configure.in, to detect whether visibility is supported, and then just use the result.
Comment 4 Carl Worth 2007-03-16 09:37:00 UTC
Thanks for the report.

Fixed in cairo 1.4.1, (with provided patches, nothing new in configure), as seen here:

http://gitweb.freedesktop.org/?p=cairo;a=commit;h=d02aa5b23eb6243b21697de203db0a5f1b49def9

-Carl


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.